[metadata]
version = 0.0.1
description = A place for POCs to be born and toddler around until they can walk on their own
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = poclab
display_name = poclab

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

